# databricks-workspace-mcp

./: .gitignore  .vscodeignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: workflow.yml
tests/: test_live_api.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: DatabricksWorkspaceFS.ts  extension.ts  workspaceUtils.ts
vscode-extension/test/: DatabricksWorkspaceFS.test.ts  workspaceUtils.test.ts
