[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-workspace-mcp"
version = "0.1.0"
description = "Local MCP server exposing Databricks workspace files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "databricks-sdk>=0.40.0",
  "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
databricks-workspace-mcp = "server:main"
